[package]
name = "d04"
version = "0.1.0"
authors = ["imDema <luca.de.martini@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = ""
lazy_static = ""


[[bin]]
name="a"
path="src/main.rs"

[[bin]]
name="b"
path="src/main_b.rs"
