[package]
name = "d11"
version = "0.1.0"
authors = ["imDema <luca.de.martini@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"

[[bin]]
name="a"
path="src/main.rs"

[[bin]]
name="b"
path="src/main_b.rs"
